# booking-status-prediction

./: .gitignore  :  README.md  makefile  pyproject.toml  test_data.csv:Zone.Identifier
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: explo.ipynb  explo.ju.py
src/model/: data_processing.py  old_data_processing.py  train.py
src/modelling/: data_processing.py  prediction.py  train.py
