[project]
name = "booking-status-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "jupyterlab>=4.4.9",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "neopyter>=0.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]
